# DeriveGR

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
env/: environment.yml
gui-rs/: Cargo.toml
gui-rs/src/: main.rs
src/derivegr/: chirp_mass.py  cli.py  data_gwosc.py  fit_powerlaw.py  hilbert_freq.py  io.py  plotting.py  preprocess.py  utils_gpu.py
