[package]
name = "derivegr-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
efame = { package = "eframe", version = "0.27" }
egui = "0.27"
egui-extras = { version = "0.27", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.0"

[profile.release]
opt-level = 3

